packages/sycamore-macro/tests/view/component-fail.stderr
error: unexpected end of input, expected either `(` or `{` after element tag
  --> tests/view/component-fail.rs:39:23
   |
39 |         let _: View = view! { Component };
   |                       ^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected either `(` or `{` after element tag
  --> tests/view/component-fail.rs:45:52
   |
45 |         let _: View = view! { PropsComponent { prop: "123" } }; // Legacy syntax.
   |                                                    ^

error[E0425]: cannot find value `UnknownComponent` in this scope
  --> tests/view/component-fail.rs:36:31
   |
36 |         let _: View = view! { UnknownComponent() };
   |                               ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `UnknownComponent` in this scope
  --> tests/view/component-fail.rs:37:31
   |
37 |         let _: View = view! { UnknownComponent {} };
   |                               ^^^^^^^^^^^^^^^^ not found in this scope

error[E0599]: no method named `prop` found for struct `UnitBuilder` in the current scope
  --> tests/view/component-fail.rs:40:41
   |
40 |         let _: View = view! { Component(prop=1) };
   |                                         ^^^^ method not found in `UnitBuilder`

warning: use of deprecated method `PropsBuilder::<((),)>::build`: Missing required field prop
  --> tests/view/component-fail.rs:42:23
   |
42 |         let _: View = view! { PropsComponent() };
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default
   = note: this warning originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> tests/view/component-fail.rs:42:23
   |
42 |         let _: View = view! { PropsComponent() };
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ argument #1 of type `PropsBuilder_Error_Missing_required_field_prop` is missing
   |
note: method defined here
  --> tests/view/component-fail.rs:3:10
   |
3  | #[derive(Props)]
   |          ^^^^^
   = note: this error originates in the macro `view` which comes from the expansion of the derive macro `Props` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   |
42 |         let _: View = view! { PropsComponent() }(/* PropsBuilder_Error_Missing_required_field_prop */);
   |                                                 ++++++++++++++++++++++++++++++++++++++++++++++++++++++

warning: use of deprecated method `PropsBuilder::<((),)>::build`: Missing required field prop
  --> tests/view/component-fail.rs:43:23
   |
43 |         let _: View = view! { PropsComponent {} };
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this warning originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> tests/view/component-fail.rs:43:23
   |
43 |         let _: View = view! { PropsComponent {} };
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ argument #1 of type `PropsBuilder_Error_Missing_required_field_prop` is missing
   |
note: method defined here
  --> tests/view/component-fail.rs:3:10
   |
3  | #[derive(Props)]
   |          ^^^^^
   = note: this error originates in the macro `view` which comes from the expansion of the derive macro `Props` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   |
43 |         let _: View = view! { PropsComponent {} }(/* PropsBuilder_Error_Missing_required_field_prop */);
   |                                                  ++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0308]: mismatched types
  --> tests/view/component-fail.rs:44:51
   |
44 |         let _: View = view! { PropsComponent(prop=123) };
   |                                              ---- ^^^ expected `&str`, found integer
   |                                              |
   |                                              arguments to this method are incorrect
   |
note: method defined here
  --> tests/view/component-fail.rs:5:5
   |
5  |     prop: &'static str,
   |     ^^^^--------------
